--- a/src/app/components/collection/new-collection/new-collection.component.html
+++ b/src/app/components/collection/new-collection/new-collection.component.html
@@ -1,4 +1,4 @@
-<ion-content *ngIf="(viewModel$ | async) as workbook">>
+<ion-content *ngIf="(viewModel$ | async) as workbook">
   <ion-card>
     <!--    <ion-card-header color="light">-->
     <!--      <ion-card-title>-->
