--- a/src/app/components/collection/upsert-collection/upsert-collection.component.html
+++ b/src/app/components/collection/upsert-collection/upsert-collection.component.html
@@ -67,7 +67,7 @@
         </ion-button>
       </ion-col>
       <ion-col size="6">
-        <ion-button fill="outline" expand="block">
+        <ion-button fill="outline" expand="block" (click)="closeModal()">
           Back
         </ion-button>
       </ion-col>
