--- a/src/app/page/game/game-page.component.html
+++ b/src/app/page/game/game-page.component.html
@@ -13,11 +13,13 @@
     </ion-card-header>
 
     <ion-card-content>
-      <!--        {{dictionary.description}}-->
+      Required number: {{collection.result.requiredSuccessfulNumber}}
+      Successful: {{collection.result.successful}}
+      Failed: {{collection.result.failed}}
     </ion-card-content>
 
-    <ion-button fill="clear">Play</ion-button>
-    <ion-button fill="clear">Settings</ion-button>
+    <ion-button fill="clear" (click)="playGuessingGame(collection)">Play</ion-button>
+    <ion-button fill="clear" (click)="modifyCollectionModal(collection)">Settings</ion-button>
   </ion-card>
 
   <ion-button (click)="log(workbook)">
