--- a/src/app/components/collection/guessing-game/guessing-game.component.html
+++ b/src/app/components/collection/guessing-game/guessing-game.component.html
@@ -1,3 +1,11 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="closeModal()">Cancel</ion-button>
+    </ion-buttons>
+    <ion-title>{{collection.name}}</ion-title>
+  </ion-toolbar>
+</ion-header>
 <ion-content>
   <ion-grid>
     <ion-row>
