--- a/src/app/components/shell/tabs/tabs.page.html
+++ b/src/app/components/shell/tabs/tabs.page.html
@@ -1,25 +1,25 @@
 <ion-tabs>
 
-    <ion-tab-bar slot="bottom">
-        <ion-tab-button tab="collection">
-            <ion-icon name="book"></ion-icon>
-            <ion-label>Dictionary</ion-label>
-        </ion-tab-button>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="collection">
+      <ion-icon name="book"></ion-icon>
+      <ion-label>Dictionary</ion-label>
+    </ion-tab-button>
 
-        <ion-tab-button tab="translate">
-            <ion-icon name="swap-horizontal"></ion-icon>
-            <ion-label>Translate</ion-label>
-        </ion-tab-button>
+    <ion-tab-button tab="translate">
+      <ion-icon name="swap-horizontal"></ion-icon>
+      <ion-label>Translate</ion-label>
+    </ion-tab-button>
 
-        <ion-tab-button tab="game">
-            <ion-icon name="game-controller"></ion-icon>
-            <ion-label>Tab 3</ion-label>
-        </ion-tab-button>
+    <ion-tab-button tab="game">
+      <ion-icon name="game-controller"></ion-icon>
+      <ion-label>Game</ion-label>
+    </ion-tab-button>
 
-        <ion-tab-button tab="profile">
-            <ion-icon name="person"></ion-icon>
-            <ion-label>Profile</ion-label>
-        </ion-tab-button>
-    </ion-tab-bar>
+    <ion-tab-button tab="profile">
+      <ion-icon name="person"></ion-icon>
+      <ion-label>Profile</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
 
 </ion-tabs>
