--- a/src/app/components/dictionary/new-dictionary/new-dictionary-modal.component.html
+++ b/src/app/components/dictionary/new-dictionary/new-dictionary-modal.component.html
@@ -1,47 +1,47 @@
-<ion-content [formGroup]="form" *ngIf="(viewModel$ | async) as workbook">
-  <div class="ion-margin">
-    <h1>
-      Create dictionary
-    </h1>
+<ng-container [formGroup]="form" *ngIf="(viewModel$ | async) as workbook">
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-button (click)="cancel()">Cancel</ion-button>
+      </ion-buttons>
+      <ion-title>Create dictionary</ion-title>
+      <ion-buttons slot="end">
+        <ion-button (click)="confirm()">Create</ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-card>
+      <ion-card-content class="ion-no-padding">
+        <ion-item>
+          <ion-input label="Name:" formControlName="name"></ion-input>
+        </ion-item>
 
-    <ion-list>
-      <ion-item>
-        <ion-input label="Name:" formControlName="name"></ion-input>
-      </ion-item>
+        <ion-item>
+          <ion-select label="Language:" formControlName="language" interface="action-sheet">
+            <ion-select-option
+              *ngFor="let language of (workbook.languages | sortLanguages)"
+              [value]="language">{{language.shortName}} - {{language.displayName}}</ion-select-option>
+          </ion-select>
+        </ion-item>
 
-      <ion-item>
-        <ion-select label="Language:" formControlName="language">
-          <ion-select-option
-            *ngFor="let language of (workbook.languages | sortLanguages)"
-            [value]="language">{{language.shortName}} - {{language.displayName}}</ion-select-option>
-        </ion-select>
-      </ion-item>
+        <!--    todo: popover lehetne mi az a text limit-->
+        <ion-item>
+          <ion-input label="Text limit:" formControlName="textLimit"></ion-input>
+        </ion-item>
 
-      <!--    todo: popover lehetne mi az a text limit-->
-      <ion-item>
-        <ion-input label="Text limit:" formControlName="textLimit"></ion-input>
-      </ion-item>
+        <ion-item>
+          <ion-textarea label="Description:" formControlName="description" [autoGrow]="true"></ion-textarea>
+        </ion-item>
 
-      <ion-item>
-        <ion-textarea label="Description:" formControlName="description" [autoGrow]="true"></ion-textarea>
-      </ion-item>
-
-      <ion-item>
-        <ion-checkbox labelPlacement="start" formControlName="default"
+        <!--      //TODO ion toggle-->
+        <ion-item lines="none">
+          <ion-toggle labelPlacement="start" formControlName="default"
                       (ionChange)="changeCheckbox($event)">
-          Default:
-        </ion-checkbox>
-      </ion-item>
-
-      <div class="ion-margin-top flex-container">
-        <ion-button (click)="confirm()">
-          Create dictionary
-        </ion-button>
-        <ion-button (click)="cancel()" slot="end">
-          Close
-        </ion-button>
-      </div>
-    </ion-list>
-  </div>
-</ion-content>
-
+            Default:
+          </ion-toggle>
+        </ion-item>
+      </ion-card-content>
+    </ion-card>
+  </ion-content>
+</ng-container>
