--- a/src/global.scss
+++ b/src/global.scss
@@ -29,40 +29,15 @@
 @import "theme/misc";
 @import "theme/_body.scss";
 
-
-#alert-modal {
-  --max-height: 50vh;
-  --width: 80%;
-  --border-radius: 16px;
-  --box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-
-  .ion-modal::part(backdrop) {
-    background: rgba(209, 213, 219);
-    opacity: 1;
-  }
-
-  //.ion-modal ion-toolbar {
-  //  --background: rgb(14 116 144);
-  //  --color: white;
-  //}
-
-  //.modal-wrapper {
-  //  border-radius: 20px;
-  //}
-}
-
-//ion-modal {
-//  --height: 50%;
+/* Custom global styles */
+//#alert-modal {
+//  --max-height: 50vh;
+//  --width: 80%;
 //  --border-radius: 16px;
 //  --box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-//}
 //
-//ion-modal::part(backdrop) {
-//  background: rgba(209, 213, 219);
-//  opacity: 1;
-//}
-//
-//ion-modal ion-toolbar {
-//  --background: rgb(14 116 144);
-//  --color: white;
+//  .ion-modal::part(backdrop) {
+//    background: rgba(209, 213, 219);
+//    opacity: 1;
+//  }
 //}
