--- a/src/app/page/game/game-page.component.html
+++ b/src/app/page/game/game-page.component.html
@@ -13,12 +13,12 @@
     </ion-card-header>
 
     <ion-card-content>
-      Required number: {{collection.result.requiredSuccessfulNumber}}
-      Successful: {{collection.result.successfulCounter}}
-      Failed: {{collection.result.failCounter}}
+      To pass the collection number: <strong>{{collection.result.requiredSuccessfulNumber}}</strong><br>
+      Successful counter: <strong>{{collection.result.successfulCounter}}</strong><br>
+      Fail counter: <strong>{{collection.result.failCounter}}</strong><br>
     </ion-card-content>
 
-    <ion-button fill="clear" (click)="playGuessingGame(collection)">Play</ion-button>
+    <ion-button fill="clear" (click)="playGame(collection)">Play</ion-button>
     <ion-button fill="clear" (click)="modifyCollectionModal(collection)">Settings</ion-button>
   </ion-card>
 
